--- a/css/style.css
+++ b/css/style.css
@@ -1375,16 +1375,7 @@ body {
     .logo-link {
         flex: auto;
     }
-    .header-cart {
-        display: none;
-    }
-    .header-search {
-        display: none;
-    }
-    .carusel {
-        display: none;
-    }
-    .carusel-pagination {
+    .main-header-nav {
         display: none;
     }
     .projects-button {
@@ -1463,6 +1454,18 @@ body {
     .main-header-top {
         width: 90%;
         margin: 6% 5%;
+    }
+    .header-cart {
+        display: none;
+    }
+    .header-search {
+        display: none;
+    }
+    .carusel {
+        display: none;
+    }
+    .carusel-pagination {
+        display: none;
     }
     .feature {
         padding: 0 5%;
