--- a/css/style.css
+++ b/css/style.css
@@ -189,9 +189,7 @@ body {
     display: inline-block;
     margin-right: 3%;
 }
-.main-header-list:last-child {
-    margin: 0;
-}
+
 .main-header-link {
     text-decoration: none;
     color: #ffffff;
@@ -1461,22 +1459,24 @@ body {
         float: right;
     }
     .main-header-menu {
+        display: none;
         position: absolute;
-        display: flex;
+        /* display: flex; */
         flex-wrap: wrap;
         background-color: rgb( 0, 0, 0);
         width: 50vw;
         top: 20%;
         right: 0;
         list-style-type: none;
-        transform: translate(100%, 0%);
+        /* transform: translate(100%, 0%);
         transform-origin: 0% 0%;
         transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-      
+       */
     }
-    .menu-mobile input:checked ~ ul {
-        transform: scale(1.0, 1.0);
-        opacity: 1;
+    .menu-mobile input:checked + .main-header-menu {
+        /* transform: scale(1.0, 1.0);
+        opacity: 1; */
+        display: flex;
     }
     .main-header-list {
         width: 100%;
